[package]
name = "sam-dns-tools"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"
serde_yml = "0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking", "socks"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
